tests/baselines/reference/parserES5ForOfStatement8.errors.txt
parserES5ForOfStatement8.ts(1,15): error TS2304: Cannot find name 'X'.


==== parserES5ForOfStatement8.ts (1 errors) ====
    for (var v of X) {
                  ~
!!! error TS2304: Cannot find name 'X'.
    }